--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "day1": "tsc day1.ts && node day1.js"
+    "day1": "tsc day1.ts && node day1.js",
+    "day2": "tsc day2.ts && node day2.js"
   },
   "author": "",
   "license": "ISC"
