--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "day1": "tsc day1.ts && node day1.js",
     "day2": "tsc day2.ts && node day2.js",
-    "day3": "tsc day3.ts && node day3.js"
+    "day3": "tsc day3.ts && node day3.js",
+    "day4": "tsc day4.ts && node day4.js"
+
 
   },
   "author": "",
